public/style.css
@font-face {
  font-family: "Papernotes";
  src: url("/fonts/Papernotes.ttf") format("truetype");
}

@font-face {
  font-family: "Super Cereal";
  src: url("/fonts/Super Cereal.ttf") format("truetype");
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#app {
  background-image: url("/bg.jpg");
  min-height: 100%;
  overflow: auto;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: white;
  background-attachment: fixed;
}

body {
  font-family: Helvetica, sans-serif;
  margin: 0;
  padding: 0;
  color: #333;
  background-color: rgba(255, 255, 255, 0);
}

.home-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.scroll-container {
  position: relative;
}

.scroll {
  position: fixed;
  font-size: 25px;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: auto;
  color: #ffffffbf;
  padding: 10px;
  z-index: 9999;
  animation: pulse 2s infinite;
  margin-bottom: 50px;
  margin-top: 50px;
}

.scroll::before {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%; 
  margin-left: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: rgba(255, 255, 255, 0.742) transparent transparent transparent;
  z-index: 100;
}

.recommended-container h1 {
  font-family: "Papernotes";
  padding: 30px;
  letter-spacing: 1px;
  margin-top: 100px;
  font-size: 60px;
  background-color:  rgba(222, 196, 171, 0.95);
  color: rgb(0, 0, 0);
}

.title {
  font-family: "Super Cereal";
  font-size: 200px;
  color: rgb(245, 230, 216);
  font-style: italic;
  text-shadow: 4px 4px 6px rgb(58, 0, 112);
  margin-bottom: 400px;
}

.ingredients-container h1 {
  font-size: 48px;
  text-align: center;
  color: #333;
  bottom: 0;
  left: 50%;
  margin-bottom: 200px;
}

#section-container3 {
  scroll-margin: 120px;
}

.description {
  font-family: "Papernotes";
  letter-spacing: 1px;
  font-size: 45px;
  text-align: center;
  color: rgb(245, 230, 216);
  padding: 100px;
  margin-bottom: 500px;
  margin-left: 50px;
  margin-right: 50px;
  background-color: rgba(109, 82, 101, 255);
  border-radius: 50%;
}

.description p {
  margin: 0;
  padding: 10px;
}

.pagination-info {
  color: white;
  font-size: 20px;
  font-style: bold;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.pagination-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.get-started-button {
  font-family: "Papernotes";
  font-size: 40px;
  animation: pulse 2s infinite;
  border-radius: 20px;
  margin-bottom: 200px;
  box-shadow: 0 0 10px rgb(255, 247, 0);
  margin-bottom: 400px;
}

.container {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

h4 {
  font-size: 20px;
  color: #555;
  margin-bottom: 10px;
}

button {
  background-color: coral;
  color: #fff;
  font-size: 20px;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
  border-radius: 4px;
}

button:hover {
  background-color: rgb(255, 94, 35);
}

.recipe-link {
  text-decoration: none; 
  color: inherit; 
}

.navbar-container {
  background-color: #000000a5;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.nav-links {
  display: flex;
}

.nav-links a {
  text-decoration: none;
  color: #fff;
  margin-left: 10px;
  margin-right: 30px;
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 24px;
}

.nav-auth-links {
  margin-right: 10px;
  margin-left: 50px;
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 24px;
}

.nav-links a:hover {
  color: #ff6f61;
}

.logout-button,
.nav-auth-links {
  display: flex;
}

.logout-button {
  background-color: transparent;
  color: #fff;
  border: none;
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 24px;
  cursor: pointer;
}

.nav-auth-links a {
  text-decoration: none;
  color: #fff;
  margin-right: 15px;
}

.nav-auth-links a:hover {
  color: #ff6f61;
}

.auth-form {
  max-width: 400px;
  margin: 0 auto;
  margin-top: 100px;
  margin-bottom: 100px;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
}

.auth-form label {
  display: block;
  font-size: 14px;
  margin-bottom: 5px;
}

.auth-form input {
  width: 93.5%;
  padding: 8px 12px;
  font-size: 14px;
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-bottom: 10px;
}

.auth-form button {
  width: 100%;
  padding: 10px;
  font-size: 16px;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.auth-form .error-message {
  color: red;
  font-size: 14px;
  margin-top: 10px;
}

.auth-form-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.recommended-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 50px;
}

.all-recipes-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  margin-top: 30px;
  height: 50%;
}

.section-container .ingredient-category {
  font-size: 28px;
}

.back-to-search {
  margin-top: 50px;
  padding: 10px 20px;
  cursor: pointer;
}

.recipe-container {
  background-color: rgba(222, 196, 171, 0.95);
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  text-align: center;
  width: 250px;
  height: 250px;
}

#recipe-name {
  font-weight: bold;
  margin-bottom: 10px;
}

.pageButtons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 20px;
  flex-wrap: wrap;
}

.pageButtons button {
  padding: 10px 20px;
  background-color: coral;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin: 0 5px;
  height: 40px;
  display: flex;
  align-items: center;
}

.pageButtons button:hover {
  background-color: rgb(255, 94, 35);
}

.recipe-details {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

.recipe-details h2 {
  font-size: 24px;
}

.recipe-img {
  width: 100%;
  max-height: 400px;
  object-fit: cover;
  margin-bottom: 20px;
}

.recipe-details p {
  font-size: 16px;
  line-height: 1.6;
}

.recipe-details h3 {
  font-size: 20px;
}

.recipe-details ul {
  list-style: none;
  padding: 0;
}

.recipe-details li {
  margin-bottom: 8px;
}

.single-recipe-container {
  background-color: rgba(222, 196, 171, 0.95);
  padding: 10px;
}

.single-recipe-container h2 {
  font-size: 42px;
  font-family: "Papernotes";
}

.ingredients-container {
  color: #222020;
  padding: 20px;
  font-family: "Papernotes";
  font-size: 22px;
}

.recipe-header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px;
}

.recipe-header-container h2 {
  margin: 0;
}

.star-icon {
  font-size: 32px;
  transition: transform 0.3s ease-in-out;
  display: inline-block;
}

.star-icon.active {
  transform: scale(1.2);
}

button.active {
  background-color: rgb(245, 80, 21);
}

.ingredients-container h1 {
  font-family: "Papernotes";
  letter-spacing: 1px;
  font-size: 40px;
  text-align: center;
  color: rgb(14, 14, 14);
  margin-bottom: 10px;
}

.ingredients-container h2 {
  font-size: 20px;
  margin-bottom: 8px;
}

.ingredients-container label {
  display: block;
  margin-bottom: 8px;
}

.ingredients-container input[type="radio"],
.ingredients-container input[type="checkbox"] {
  margin-right: 10px;
  font-family: "Papernotes";
  font-size: 22px;
}

.find-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
}

.find-recipes {
  font-family: "Papernotes";
  font-size: 40px;
  animation: pulse 2s infinite;
  margin: 0 auto;
  border-radius: 20px;
  margin-bottom: 200px;
  box-shadow: 0 0 10px rgb(255, 247, 0);
}

.ingredients-container .ingredient-category {
  margin-bottom: 20px;
}

.ingredients-container .ingredient-category h2 {
  font-size: 18px;
}

.ingredients-container .ingredient-item {
  margin-bottom: 5px;
}

.section-container {
  background-color: rgba(222, 196, 171, 0.95);
  padding: 10px;
  margin-top: 300px;
  margin-bottom: 100px;
  border-radius: 90px;
}

#dietaryRestrictions,
#mealtype {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  font-size: 30px;
}

#dietaryRestrictions h1,
#mealtype h1 {
  font-size: 60px;
}

#allIngredients {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

#dietaryRestrictions h1,
#allIngredients h2 {
  flex-basis: 100%;
}

.favorites-container {
  max-width: 600px;
  margin: 0 auto;
  padding: 20px;
  background-color: rgba(222, 196, 171, 0.95);
  border: 1px solid #ccc;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  height: 100vh;
}

.favorites-container h3 {
  font-size: 32px;
  letter-spacing: 1px;
  font-family: Papernotes;
  margin-bottom: 10px;
}

#back-button {
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 24px;
}

.favorites-container h4 {
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 24px;
  margin-bottom: 20px;
}

.favorite-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.favorite-list li {
  margin-bottom: 10px;
}

.favorite-recipe-img {
  width: 60px;
  height: 60px;
  object-fit: cover;
  border-radius: 50%;
  margin-right: 10px;
}
.favorite-link {
  color: #007bff;
  text-decoration: none;
}

.favorite-list a {
  color: #333;
  text-decoration: none;
  font-size: 18px;
  font-weight: bold;
}

.favorites-container p {
  letter-spacing: 1px;
  font-family: Papernotes;
  font-size: 26px;
  color: #2d2d2d;
  margin-top: 50px;
}

.favorite-link:hover {
  text-decoration: underline;
}

.filter-container {
  display: flex;
  justify-content: flex-end;
  font-size: 25px;
  align-items: center;
  font-family: "Papernotes";
  color: rgb(255, 240, 240);
  gap: 10px;
  margin-top: 40px;
  margin-bottom: 20px;
  padding: 10px;
  background-color: #000000a5;
}

.filter-container h2 {
  font-size: 16px;
  margin-right: 8px;
}

.filter-container div {
  display: flex;
  align-items: center;
}

.filter-container label {
  font-weight: bold;
  margin-right: 4px;
}

.filter-container select {
  padding: 6px 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  background-color: #fff;
  font-size: 14px;
}

.filter-container button {
  padding: 8px 16px;
  background-color: coral;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  transition: background-color 0.3s ease;
}

.filter-container button:hover {
  background-color: rgb(255, 94, 35);
}

@media (max-width: 768px) {
  .title {
    margin-top: 100px;
    font-size: 70px;
  }

  .description {
    font-size: 28px;
    margin-bottom: 100px; 
    padding: 5px;
    border-radius: 10%;
  }

  .nav-links a {
    font-size: 16px;
  }
  
  .nav-auth-links {
    font-size: 16px;
  }

  .section-container {
    border-radius: 20px;
  }

  #app {
    background-size: contain;
  }

}

